--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .body{
-    background-color:#f7f7f7 !important;
+    background-color:#e2e6e7 !important;
+    height: auto;
 }
 .nav-style{
 background-color: #ff2241;
@@ -10,11 +11,10 @@ img.img1{
 }
 .nav-link{
     color: rgb(255, 255, 255) !important;
-    font-size: 20px;
-    padding-left:30px !important;
-   
+    font-size: 20px; 
 }
 .nav-link:hover{
+    background-color: rgb(57, 15, 153);
     border-top: 4px solid white;
     border-bottom: 4px solid white;
     padding: 6px 0;  
@@ -26,21 +26,46 @@ img.img1{
 .menubar{
     padding-left: 140px !important;
 }
+/* --------------carousel------------------ */
 .carousel-item img{
     width: 100%; 
     height: 250px;
 }
-.Box1{
+/* ------------------box1------------------- */
+.box1{
     width: 95% !important;
     /* height: 300px; */
     background-color: rgb(255, 255, 255);
     padding-top: 30px;
+   
 }
 .card-img-top{
     width: 252px;
     height: 200px;
     margin-top:15px;
 }
-.card{
+.box1>.row>.col>.card{
     box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) !important;
 }
+/* -------------------curd 2------------------------ */
+.box2 .row2{
+    margin-right:10px !important;
+    margin-left: 10px;
+    font-size: 12px;
+    
+}
+.box2>.row>.col{
+    margin-right: 0px !important;
+  
+}
+.col2{
+   padding-left: 5px !important;
+   border-radius:0px !important;
+    /* padding-left: 0; */
+}
+.seemore{
+    margin-left: 20px;
+}
+
+
+
